@@ -8,7 +8,12 @@ import javax.swing.*;
 import controller.*;
 
 /**
- * The type Ex and vote gui.
+ * Interfaccia grafica per la valutazione dei documenti di un team da parte di un giudice.
+ * Questa classe permette ai giudici di visualizzare i documenti di progresso pubblicati
+ * da un team specifico, commentarli e assegnare una valutazione complessiva al team.
+ * L'interfaccia mostra una lista di documenti con anteprime, consente di aprirli
+ * per la lettura completa e l'inserimento di commenti, e fornisce un sistema
+ * di valutazione tramite voti da 0 a 10.
  */
 public class ExAndVoteGUI {
     private JFrame frame;
@@ -24,13 +29,17 @@ public class ExAndVoteGUI {
     private ArrayList<String> documentPreviews;
 
     /**
-     * Instantiates a new Ex and vote gui.
+     * Costruisce l'interfaccia grafica per esaminare e valutare un team.
+     * Inizializza la finestra principale, carica i documenti del team dal database o dalla memoria
+     * e configura tutti i componenti grafici necessari per visualizzare,
+     * commentare e valutare i documenti. Se non ci sono documenti disponibili,
+     * mostra un messaggio di errore e ritorna alla schermata precedente.
      *
-     * @param controller  the controller
-     * @param callerFrame the caller frame
-     * @param teamName    the team name
-     * @param title       the title
-     * @param location    the location
+     * @param controller  il controller principale
+     * @param callerFrame il frame chiamante a cui ritornare quando si preme "Indietro"
+     * @param teamName    il nome del team da esaminare
+     * @param title       il titolo dell'hackathon
+     * @param location    la sede dell'hackathon
      */
     public ExAndVoteGUI(Controller controller, JFrame callerFrame, String teamName, String title, String location) {
         this.teamName = teamName;
@@ -66,6 +75,8 @@ public class ExAndVoteGUI {
                     "C'è stato un errore!\n" + error,
                     "Errore", JOptionPane.ERROR_MESSAGE);
         }
+
+        // Crea anteprime documento
         documentPreviews = new ArrayList<>();
         for (String documentContent : documentContents) {
             if (documentContent.length() >= 50) {
@@ -79,20 +90,28 @@ public class ExAndVoteGUI {
         JPanel listPanel = new JPanel();
         listPanel.setLayout(new BoxLayout(listPanel, BoxLayout.Y_AXIS));
         listPanel.setBackground(new Color(240, 240, 245));
+        listPanel.setBorder(BorderFactory.createEmptyBorder(15, 40, 15, 40));
 
         documentGroup = new ButtonGroup();
         documentButtons = new JRadioButton[documentTitles.size()];
 
         for (int i = 0; i < documentTitles.size(); i++) {
             JPanel card = createDocumentCard(documentTitles.get(i), documentPreviews.get(i), i);
+
+            // Limita altezza della card
+            card.setMaximumSize(new Dimension(Integer.MAX_VALUE, 70));
+            card.setAlignmentX(Component.LEFT_ALIGNMENT);
+
             listPanel.add(card);
             listPanel.add(Box.createRigidArea(new Dimension(0, 10)));
         }
 
         JScrollPane scrollPane = new JScrollPane(listPanel);
         scrollPane.setBorder(BorderFactory.createEmptyBorder(10, 40, 10, 40));
-        scrollPane.getVerticalScrollBar().setUnitIncrement(16);
+        scrollPane.setVerticalScrollBarPolicy(ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED);
         scrollPane.setHorizontalScrollBarPolicy(ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
+        scrollPane.getVerticalScrollBar().setUnitIncrement(16);
+
         mainPanel.add(scrollPane, BorderLayout.CENTER);
 
         // ===== PANEL INFERIORE =====
@@ -143,8 +162,8 @@ public class ExAndVoteGUI {
         try {
             frame.setContentPane(mainPanel);
             frame.setVisible(true);
-            documentTitles.getFirst();
-        } catch (NoSuchElementException e) {
+            documentTitles.get(0); // controlla se ci sono documenti
+        } catch (IndexOutOfBoundsException e) {
             JOptionPane.showMessageDialog(frame,
                     "Non ci sono documenti da esaminare!",
                     "Errore", JOptionPane.ERROR_MESSAGE);
@@ -153,7 +172,17 @@ public class ExAndVoteGUI {
         }
     }
 
-    // ===== CREA CARD DOCUMENTO =====
+    /**
+     * Crea una card grafica per rappresentare un documento nella lista.
+     * La card mostra il titolo del documento, un'anteprima del contenuto
+     * e include un {@link JRadioButton} per la selezione. L'intera card è cliccabile
+     * per selezionare il documento corrispondente.
+     *
+     * @param docName il titolo del documento
+     * @param preview l'anteprima del contenuto del documento (primi 50 caratteri)
+     * @param index   l'indice del documento nell'array dei documenti
+     * @return il pannello JPanel configurato come card del documento
+     */
     private JPanel createDocumentCard(String docName, String preview, int index) {
         JPanel card = new JPanel(new BorderLayout());
         card.setBackground(Color.WHITE);
@@ -201,7 +230,12 @@ public class ExAndVoteGUI {
         return card;
     }
 
-    // ===== APRE DOCUMENTO SELEZIONATO =====
+    /**
+     * Apre il popup di dettaglio per il documento selezionato.
+     * Verifica quale {@link JRadioButton} è selezionato e apre il corrispondente
+     * documento in un popup modale. Se nessun documento è selezionato,
+     * mostra un messaggio di avviso.
+     */
     private void openSelectedDocument() {
         for (int i = 0; i < documentButtons.length; i++) {
             if (documentButtons[i].isSelected()) {
@@ -215,7 +249,17 @@ public class ExAndVoteGUI {
                 JOptionPane.WARNING_MESSAGE);
     }
 
-    // ===== POPUP DOCUMENTO =====
+    /**
+     * Apre un popup modale per visualizzare e commentare un documento.
+     * Il popup mostra il contenuto completo del documento in una sezione
+     * e i commenti esistenti con la possibilità di aggiungerne di nuovi
+     * in un'altra sezione. Il giudice può inserire il proprio commento
+     * e salvarlo.
+     *
+     * @param docName il titolo del documento
+     * @param content il contenuto completo del documento
+     * @param comment i commenti precedenti sul documento
+     */
     private void openDocumentPopup(String docName, String content, String comment) {
         JDialog dialog = new JDialog(frame, "Documento - " + docName, true);
         dialog.setSize(800, 500);
@@ -223,12 +267,10 @@ public class ExAndVoteGUI {
         dialog.setLayout(new BorderLayout());
         dialog.getContentPane().setBackground(new Color(245, 245, 250));
 
-        // --- Pannello principale con due colonne ---
-        JPanel mainContent = new JPanel(new GridLayout(1, 2, 10, 0)); // due colonne
+        JPanel mainContent = new JPanel(new GridLayout(1, 2, 10, 0));
         mainContent.setBackground(new Color(245, 245, 250));
         mainContent.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
 
-        // --- Sezione documento ---
         JTextArea contentArea = new JTextArea();
         contentArea.setText(content);
         contentArea.setFont(new Font("Arial", Font.PLAIN, 15));
@@ -241,7 +283,6 @@ public class ExAndVoteGUI {
         contentScroll.setBorder(BorderFactory.createTitledBorder("Contenuto documento"));
         contentScroll.setVerticalScrollBarPolicy(ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED);
 
-        // --- Sezione commenti ---
         JTextArea commentArea = new JTextArea();
         commentArea.setText(comment + "\n" + controller.getUser().getName() + " " + controller.getUser().getSurname() + ":\n");
         commentArea.setFont(new Font("Arial", Font.PLAIN, 15));
@@ -254,10 +295,8 @@ public class ExAndVoteGUI {
 
         mainContent.add(contentScroll);
         mainContent.add(commentScroll);
-
         dialog.add(mainContent, BorderLayout.CENTER);
 
-        // --- Pannello bottoni ---
         JPanel buttonPanel = new JPanel(new FlowLayout(FlowLayout.CENTER, 20, 10));
         buttonPanel.setBackground(new Color(245, 245, 250));
 
@@ -294,14 +333,16 @@ public class ExAndVoteGUI {
 
         buttonPanel.add(commentBtn);
         buttonPanel.add(closeBtn);
-
         dialog.add(buttonPanel, BorderLayout.SOUTH);
         dialog.setVisible(true);
     }
 
-
-
-    // ===== POPUP VALUTAZIONE =====
+    /**
+     * Apre un popup modale per assegnare una valutazione al team.
+     * Il popup permette di selezionare un voto da 0 a 10 tramite
+     * un menù a tendina e di confermarlo. Il voto viene salvato
+     * e associato al team per l'hackathon corrente.
+     */
     private void openVoteDialog() {
         JDialog dialog = new JDialog(frame, "Assegna Voto", true);
         dialog.setSize(350, 200);
